...

  return (
    <BottomSheet
      footer={footer}
      heightRatio={0.84}
      onClose={onClose}
      title={diary ? `댓글 ${totalComments}개` : '댓글'}
      visible={visible}>
      {diary ? (
        <View style={styles.content}>
          <ScrollView
            bounces={false}
            contentContainerStyle={styles.sheetScrollContent}
...
